Connection et hash de password + debut JWT
